[package]
name = "hostname"
version = "0.3.1"
description = "Cross-platform system's host name functions"
categories = ["api-bindings", "os"]
keywords = ["hostname", "gethostname", "sethostname"]
authors = [
    "fengcen <fengcen.love@gmail.com>",
    "svartalf <self@svartalf.info>"
]
repository = "https://github.com/svartalf/hostname"
readme = "README.md"
license = "MIT"

[features]
default = []
# Enables the `hostname::set` function
set = []

[dependencies]
match_cfg = "^0.1"

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
libc = "^0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["sysinfoapi"] }

[dev-dependencies]
version-sync = "0.8"

[package.metadata.docs.rs]
features = ["set"]
rustdoc-args = ["--cfg", "docsrs"]
