[package]
name = "hostname"
version = "0.3.1"
description = "Cross-platform system's host name functions"
categories = ["api-bindings", "os"]
keywords = ["hostname", "gethostname", "sethostname"]
authors = [
    "fengcen <fengcen.love@gmail.com>",
    "svartalf <self@svartalf.info>"
]
repository = "https://github.com/svartalf/hostname"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
default = []
# Enables the `hostname::set` function
set = []

[dependencies]
cfg-if = "^1.0"

[target.'cfg(any(unix, target_os = "redox"))'.dependencies]
libc = "^0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version="^0.43", features=["Win32_Foundation", "Win32_System_SystemInformation"] }

[dev-dependencies]
version-sync = "0.8"

[package.metadata.docs.rs]
features = ["set"]
rustdoc-args = ["--cfg", "docsrs"]
